--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -69,14 +69,22 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TradeBot.Core.Program</StartupObject>
+    <StartupObject>TradeBot.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icons\uptrend_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\Icons\uptrend_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\JsonClassGenerator\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity.Design.PluralizationServices, Version=4.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\JsonClassGenerator\System.Data.Entity.Design.PluralizationServices.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -89,40 +97,43 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\TWSLib.dll</HintPath>
     </Reference>
+    <Reference Include="Xamasoft.JsonClassGenerator, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>References\JsonClassGenerator\Xamasoft.JsonClassGenerator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\FileIO\ClassBuilder.cs" />
-    <Compile Include="Core\FileIO\DataTypeParser.cs" />
-    <Compile Include="Core\FileIO\ResourceClassGenerator.cs" />
-    <Compile Include="Core\FileIO\ResourcePropertySorter.cs" />
-    <Compile Include="Core\FileIO\ResourceKeyClassGenerator.cs" />
-    <Compile Include="Core\FileIO\ResourceFiles.cs" />
-    <Compile Include="Core\FileIO\Properties.cs" />
-    <Compile Include="Core\Resources\AppState.cs" />
-    <Compile Include="Core\Resources\Messages.cs" />
-    <Compile Include="Core\Resources\Preferences.cs" />
-    <Compile Include="Core\Tws\TwsResponseHandler.cs" />
-    <Compile Include="Core\Gui\Screen.cs" />
-    <Compile Include="Core\Gui\Messenger.cs" />
-    <Compile Include="Core\MenuFramework\Menu.cs" />
-    <Compile Include="Core\MenuFramework\MenuOption.cs" />
-    <Compile Include="Core\Program.cs" />
-    <Compile Include="Core\FileIO\StringExtensions.cs" />
+    <Compile Include="FileIO\CustomJsonClassGenerator.cs" />
+    <Compile Include="FileIO\PropertyFiles.cs" />
+    <Compile Include="Gen\MessageProperties.cs" />
+    <Compile Include="Gen\PreferenceProperties.cs" />
+    <Compile Include="Gen\StateProperties.cs" />
+    <Compile Include="Resources.cs" />
+    <Compile Include="Tws\TwsResponseHandler.cs" />
+    <Compile Include="Gui\Screen.cs" />
+    <Compile Include="Gui\IO.cs" />
+    <Compile Include="MenuFramework\Menu.cs" />
+    <Compile Include="MenuFramework\MenuOption.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\Util\StockMath.cs" />
-    <Compile Include="Core\Tws\TwsClient.cs" />
-    <Compile Include="Core\Gui\Window.cs" />
+    <Compile Include="Util\StockMath.cs" />
+    <Compile Include="Tws\TwsClient.cs" />
+    <Compile Include="Gui\Window.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="res\default.prefs" />
-    <None Include="res\messages" />
-    <None Include="res\app.state" />
-    <None Include="res\user.prefs" />
-    <None Include="scripts\generate_resource_classes.sh" />
-    <None Include="scripts\old\generate_resource_key_classes.sh" />
-    <None Include="scripts\run_all.sh" />
-    <None Include="scripts\sort_resource_properties.sh" />
+    <None Include="References\JsonClassGenerator\LICENSE" />
+    <None Include="Resources\messages.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\state.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\preferences.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Scripts\generate_models_from_json.sh" />
+    <None Include="Scripts\remove_git_index_lock_file.sh" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
@@ -137,10 +148,15 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="icons\uptrend_icon.ico" />
-    <Content Include="lib\TWSLib.dll" />
-    <Content Include="res\readme.txt" />
+    <Content Include="References\JsonClassGenerator\Newtonsoft.Json.dll" />
+    <Content Include="References\JsonClassGenerator\System.Data.Entity.Design.PluralizationServices.dll" />
+    <Content Include="References\JsonClassGenerator\Xamasoft.JsonClassGenerator.dll" />
+    <Content Include="Resources\Icons\uptrend_icon.ico" />
+    <Content Include="References\TWSLib.dll" />
+    <Content Include="Resources\readme.txt" />
+    <Content Include="todo.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
