Renamed property files

--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -106,10 +106,10 @@
     <Compile Include="Collections\PriceData.cs" />
     <Compile Include="FileIO\CustomJsonClassGenerator.cs" />
     <Compile Include="FileIO\PropertyFiles.cs" />
-    <Compile Include="Gen\MessageProperties.cs" />
-    <Compile Include="Gen\PreferenceProperties.cs" />
-    <Compile Include="Gen\StateProperties.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Gen\AppMessages.cs" />
+    <Compile Include="Gen\AppPreferences.cs" />
+    <Compile Include="Gen\AppState.cs" />
     <Compile Include="Resources.cs" />
     <Compile Include="Tws\ContractFactory.cs" />
     <Compile Include="Tws\OrderFactory.cs" />
