--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -104,7 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\PropertyValueChanged.cs" />
-    <Compile Include="Tws\PriceData.cs" />
+    <Compile Include="TwsAbstractions\PriceData.cs" />
     <Compile Include="FileIO\PropertySerializer.cs" />
     <Compile Include="FileIO\CustomJsonClassGenerator.cs" />
     <Compile Include="FileIO\PropertyFiles.cs" />
@@ -114,18 +114,18 @@
     <Compile Include="Generated\AppPreferences.cs" />
     <Compile Include="Generated\AppState.cs" />
     <Compile Include="TradeBotUI.cs" />
-    <Compile Include="Tws\ContractFactory.cs" />
-    <Compile Include="Tws\OrderFactory.cs" />
-    <Compile Include="Tws\PriceDataStore.cs" />
-    <Compile Include="Tws\TwsApiConstants.cs" />
-    <Compile Include="Tws\TwsResponseHandler.cs" />
+    <Compile Include="TwsAbstractions\ContractFactory.cs" />
+    <Compile Include="TwsAbstractions\OrderFactory.cs" />
+    <Compile Include="TwsAbstractions\PriceDataStore.cs" />
+    <Compile Include="TwsAbstractions\TwsApiConstants.cs" />
+    <Compile Include="TwsAbstractions\TwsResponseHandler.cs" />
     <Compile Include="Gui\Screen.cs" />
     <Compile Include="Gui\IO.cs" />
     <Compile Include="MenuFramework\Menu.cs" />
     <Compile Include="MenuFramework\MenuOption.cs" />
     <Compile Include="TradeBotService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tws\TwsClient.cs" />
+    <Compile Include="TwsAbstractions\TwsClient.cs" />
     <Compile Include="Gui\Window.cs" />
     <Compile Include="Gui\OS.cs" />
   </ItemGroup>
