--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -69,7 +69,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>TradeBot.TradeBotUI</StartupObject>
+    <StartupObject>TradeBot.TradeBotConsole</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\Icons\uptrend_icon.ico</ApplicationIcon>
@@ -113,7 +113,7 @@
     <Compile Include="Generated\AppMessages.cs" />
     <Compile Include="Generated\AppPreferences.cs" />
     <Compile Include="Generated\AppState.cs" />
-    <Compile Include="TradeBotUI.cs" />
+    <Compile Include="TradeBotConsole.cs" />
     <Compile Include="TwsAbstractions\ContractFactory.cs" />
     <Compile Include="TwsAbstractions\OrderFactory.cs" />
     <Compile Include="TwsAbstractions\PriceDataStore.cs" />
@@ -123,7 +123,7 @@
     <Compile Include="Gui\IO.cs" />
     <Compile Include="MenuFramework\Menu.cs" />
     <Compile Include="MenuFramework\MenuOption.cs" />
-    <Compile Include="TradeBotService.cs" />
+    <Compile Include="TradeBot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwsAbstractions\TwsClient.cs" />
     <Compile Include="Gui\Window.cs" />
