--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -128,6 +128,7 @@
     <Compile Include="TwsAbstractions\TwsClient.cs" />
     <Compile Include="Gui\Window.cs" />
     <Compile Include="Gui\OS.cs" />
+    <Compile Include="Utils\StockMath.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -165,6 +166,9 @@
     <Content Include="Resources\readme.txt" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
