--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -123,7 +123,7 @@
     <Compile Include="Gui\IO.cs" />
     <Compile Include="MenuFramework\Menu.cs" />
     <Compile Include="MenuFramework\MenuOption.cs" />
-    <Compile Include="TradeBot.cs" />
+    <Compile Include="TradeBotService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwsAbstractions\TwsClient.cs" />
     <Compile Include="Gui\Window.cs" />
@@ -166,9 +166,7 @@
     <Content Include="Resources\readme.txt" />
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="Utils\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
