--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -104,7 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\PropertyValueChanged.cs" />
-    <Compile Include="TwsAbstractions\PriceData.cs" />
+    <Compile Include="TwsAbstractions\TickData.cs" />
     <Compile Include="FileIO\PropertySerializer.cs" />
     <Compile Include="FileIO\CustomJsonClassGenerator.cs" />
     <Compile Include="FileIO\PropertyFiles.cs" />
@@ -116,7 +116,7 @@
     <Compile Include="TradeBotConsole.cs" />
     <Compile Include="TwsAbstractions\ContractFactory.cs" />
     <Compile Include="TwsAbstractions\OrderFactory.cs" />
-    <Compile Include="TwsAbstractions\PriceDataStore.cs" />
+    <Compile Include="TwsAbstractions\TickDataStore.cs" />
     <Compile Include="TwsAbstractions\TwsApiConstants.cs" />
     <Compile Include="TwsAbstractions\TwsResponseHandler.cs" />
     <Compile Include="Gui\Screen.cs" />
