--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -129,12 +129,13 @@
     <Compile Include="Gui\IO.cs" />
     <Compile Include="MenuFramework\Menu.cs" />
     <Compile Include="MenuFramework\MenuOption.cs" />
-    <Compile Include="TradeBotService.cs" />
+    <Compile Include="TradeBotClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Gui\Window.cs" />
     <Compile Include="Gui\OS.cs" />
     <Compile Include="Utils\StockMath.cs" />
     <Compile Include="Utils\NumberGenerator.cs" />
+    <Compile Include="IBClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
