--- a/TradeBot/NLog.config
+++ b/TradeBot/NLog.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<targets>
-		<target name="file" xsi:type="File" fileName="logs.txt" />
-		<target name="console" xsi:type="Console" />
-	</targets>
-	<rules>
-		<logger name="*" minlevel="Trace" writeTo="file" />
-		<logger name="*" minlevel="Trace" writeTo="console" />
-	</rules>
+  <targets>
+    <target name="traceFile" xsi:type="File" fileName="Logs/trace.txt" layout="${date:format=MM/dd HH\:mm\:ss}${newline}${message}${newline}" />
+    <target name="logFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd HH\:mm\:ss}${newline}${message}${newline}" />
+    <target name="appConsole" xsi:type="ColoredConsole" layout="${message} ${newline}">
+      <highlight-row condition="level == LogLevel.Warn" foregroundColor="Green"/>
+    </target>
+  </targets>
+  <rules>
+    <!--<logger name="*" levels="Trace,Debug" writeTo="traceFile" />-->
+    <logger name="*" minlevel="Debug" writeTo="logFile" />
+    <logger name="*" minlevel="Info" writeTo="appConsole" />
+  </rules>
 </nlog>
