Additional logging cleanup

--- a/TradeBot/NLog.config
+++ b/TradeBot/NLog.config
@@ -4,7 +4,12 @@
     <target name="traceFile" xsi:type="File" fileName="Logs/trace.txt" layout="${date:format=MM/dd HH\:mm\:ss}${newline}${message}${newline}" />
     <target name="logFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd HH\:mm\:ss}${newline}${message}${newline}" />
     <target name="appConsole" xsi:type="ColoredConsole" layout="${message} ${newline}">
+      <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray"/>
+      <highlight-row condition="level == LogLevel.Debug" foregroundColor="Gray"/>
+      <highlight-row condition="level == LogLevel.Info" foregroundColor="White"/>
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Green"/>
+      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
+      <highlight-row condition="level == LogLevel.Fatal" foregroundColor="DarkRed"/>
     </target>
   </targets>
   <rules>
