Cleaned up app structure

--- a/TradeBot/NLog.config
+++ b/TradeBot/NLog.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <targets>
-    <target name="traceFile" xsi:type="File" fileName="Logs/trace.txt" layout="${date:format=MM/dd HH\:mm\:ss}${newline}${message}${newline}" />
     <target name="logFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd HH\:mm\:ss}${newline}${message}${newline}" />
     <target name="appConsole" xsi:type="ColoredConsole" layout="${message} ${newline}">
       <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray"/>
@@ -13,8 +12,7 @@
     </target>
   </targets>
   <rules>
-    <!--<logger name="*" levels="Trace,Debug" writeTo="traceFile" />-->
-    <logger name="*" minlevel="Debug" writeTo="logFile" />
-    <logger name="*" minlevel="Info" writeTo="appConsole" />
+    <logger name="*" minlevel="Trace" writeTo="logFile" />
+    <logger name="*" minlevel="Debug" writeTo="appConsole" />
   </rules>
 </nlog>
