Polished log output

--- a/TradeBot/NLog.config
+++ b/TradeBot/NLog.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <targets>
-    <target name="logFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd HH\:mm\:ss}${newline}${message}${newline}" />
-    <target name="appConsole" xsi:type="ColoredConsole" layout="${message} ${newline}">
+    <target name="logFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd/yy | HH\:mm\:ss} | ${level:uppercase}${newline}${message}${newline}"/>
+    <target name="debugFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd/yy | HH\:mm\:ss} | ${level:uppercase}${newline}${message}${newline}"/>
+    <target name="appConsole" xsi:type="ColoredConsole" layout="${message}${newline}">
       <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray"/>
-      <highlight-row condition="level == LogLevel.Debug" foregroundColor="Gray"/>
+      <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray"/>
       <highlight-row condition="level == LogLevel.Info" foregroundColor="White"/>
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Green"/>
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red"/>
@@ -12,7 +13,8 @@
     </target>
   </targets>
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="logFile" />
-    <logger name="*" minlevel="Debug" writeTo="appConsole" />
+    <logger name="*" levels="Trace,Info,Warn,Error,Fatal" writeTo="logFile" />
+    <logger name="*" level="Debug" writeTo="debugFile"/>
+    <logger name="*" minlevel="Info" writeTo="appConsole" />
   </rules>
 </nlog>
