Split logging into multiple files

--- a/TradeBot/NLog.config
+++ b/TradeBot/NLog.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <targets>
-    <target name="logFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd/yy | HH\:mm\:ss} | ${level:uppercase}${newline}${message}${newline}"/>
-    <target name="debugFile" xsi:type="File" fileName="Logs/logs.txt" layout="${date:format=MM/dd/yy | HH\:mm\:ss} | ${level:uppercase}${newline}${message}${newline}"/>
-    <target name="appConsole" xsi:type="ColoredConsole" layout="${message}${newline}">
+    <target name="logFile" xsi:type="File" 
+            layout="${date:format=HH\:mm\:ss} ${level:uppercase}${newline}${message}${newline}"
+            fileName="Logs/${shortdate}.txt" />
+    
+    <target name="debugFile" xsi:type="File" 
+            layout="${date:format=HH\:mm\:ss} ${level:uppercase}${newline}${message}${newline}"
+            fileName="Logs/debug.txt" />
+    
+    <target name="appConsole" xsi:type="ColoredConsole" 
+            layout="${message}${newline}">
       <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray"/>
       <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray"/>
       <highlight-row condition="level == LogLevel.Info" foregroundColor="White"/>
