--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -79,20 +79,8 @@
     <ExternalConsole>true</ExternalConsole>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSharpAPI, Version=9.72.18.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\CSharpAPI.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\JsonClassGenerator\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity.Design.PluralizationServices, Version=4.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\JsonClassGenerator\System.Data.Entity.Design.PluralizationServices.dll</HintPath>
-    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -101,12 +89,20 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Xamasoft.JsonClassGenerator, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\JsonClassGenerator\Xamasoft.JsonClassGenerator.dll</HintPath>
-    </Reference>
     <Reference Include="NLog">
       <HintPath>Libs\NLog\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Libs\JsonClassGenerator\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.Entity.Design.PluralizationServices">
+      <HintPath>Libs\JsonClassGenerator\System.Data.Entity.Design.PluralizationServices.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamasoft.JsonClassGenerator">
+      <HintPath>Libs\JsonClassGenerator\Xamasoft.JsonClassGenerator.dll</HintPath>
+    </Reference>
+    <Reference Include="CSharpAPI">
+      <HintPath>Libs\TWS\CSharpAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +155,10 @@
     <None Include="Libs\NLog\LICENSE.txt" />
     <None Include="Libs\NLog\NLog.dll" />
     <Content Include="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="Scripts\readme.txt" />
+    <Content Include="TradeBot.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
