Updated logger config and default state files

--- a/TradeBot/NLog.config
+++ b/TradeBot/NLog.config
@@ -3,11 +3,19 @@
   <targets>
     <target name="logFile" xsi:type="File" 
             layout="${date:format=HH\:mm\:ss} ${level:uppercase}${newline}${message}${newline}"
-            fileName="Logs/${shortdate}.txt" />
+            fileName="logs/log.txt"
+            archiveFileName="logs/archives/log.{#}.txt"
+            archiveEvery="Day"
+            archiveNumbering="Rolling"
+            maxArchiveFiles="7"
+            concurrentWrites="true"
+            keepFileOpen="false" />
     
     <target name="debugFile" xsi:type="File" 
             layout="${date:format=HH\:mm\:ss} ${level:uppercase}${newline}${message}${newline}"
-            fileName="Logs/debug.txt" />
+            fileName="logs/debug.txt"
+            concurrentWrites="true"
+            keepFileOpen="false" />
     
     <target name="appConsole" xsi:type="ColoredConsole" 
             layout="${message}${newline}">
