Refactored, stuck on a bug when requesting positions

--- a/TradeBot/NLog.config
+++ b/TradeBot/NLog.config
@@ -30,6 +30,6 @@
   <rules>
     <logger name="*" levels="Trace,Info,Warn,Error,Fatal" writeTo="logFile" />
     <logger name="*" level="Debug" writeTo="debugFile"/>
-    <logger name="*" minlevel="Info" writeTo="appConsole" />
+    <logger name="*" minlevel="Debug" writeTo="appConsole" />
   </rules>
 </nlog>
