--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Utils\NumberGenerator.cs" />
     <Compile Include="TwsAbstractions\EWrapperImpl.cs" />
     <Compile Include="Events\PositionUpdatedEvent.cs" />
+    <Compile Include="TradeBotMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\uptrend_icon.ico" />
