--- a/TradeBot/TradeBot.csproj
+++ b/TradeBot/TradeBot.csproj
@@ -126,21 +126,21 @@
     <Compile Include="Generated\AppMessages.cs" />
     <Compile Include="Generated\AppPreferences.cs" />
     <Compile Include="Generated\AppState.cs" />
-    <Compile Include="TradeBotConsole.cs" />
+    <Compile Include="TradeController.cs" />
     <Compile Include="TwsAbstractions\ContractFactory.cs" />
     <Compile Include="TwsAbstractions\OrderFactory.cs" />
     <Compile Include="TwsAbstractions\TwsApiConstants.cs" />
     <Compile Include="Gui\IO.cs" />
     <Compile Include="MenuFramework\Menu.cs" />
     <Compile Include="MenuFramework\MenuOption.cs" />
-    <Compile Include="TradeBotService.cs" />
+    <Compile Include="TradeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Gui\OS.cs" />
     <Compile Include="Utils\NumberGenerator.cs" />
     <Compile Include="TwsAbstractions\EWrapperImpl.cs" />
     <Compile Include="Events\PositionUpdatedEvent.cs" />
-    <Compile Include="TradeBotMenu.cs" />
-    <Compile Include="TradeBotHeader.cs" />
+    <Compile Include="TradeMenu.cs" />
+    <Compile Include="TradeStatusBar.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icons\uptrend_icon.ico" />
